# staking-app

./: .gitignore  README.md  package-lock.json
client/: package-lock.json
client/src/: initializeKeypair.ts  rust-client.ts
client/src/instructions/: stakingIx.ts
program/: .gitignore  Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
