[package]
name = "metacamp-staking-program"
version = "3.5.0"
description = "Solana Program Library Token"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"
exclude = ["js/**"]

[features]
no-entrypoint = []

[dependencies]
spl-token = "3.5.0"
spl-associated-token-account = { version = "1.1.2", features = ["no-entrypoint"]}
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.4"
solana-program = "1.14.11"
thiserror = "1.0"
borsh = "0.9.3"


[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "~1.14.11"
solana-sdk = "~1.14.11"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]